<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.example.ift604.hockeyapp.MatchView"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/match_view_space_between_tables">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:text="TeamA"
                android:id="@+id/match_teamA"
                android:textSize="20dp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:gravity="center"
                android:text="vs."
                android:textSize="20dp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:gravity="end"
                android:text="TeamB"
                android:id="@+id/match_teamB"
                android:textSize="20dp"/>
        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/match_view_space_between_tables"
            android:paddingLeft="@dimen/match_view_padding_table"
            android:paddingRight="@dimen/match_view_padding_table">
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:background="#222222">
                <TextView
                    android:layout_width="fill_parent"
                    android:textColor="#fff"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:text="@string/caption_score"/>
            </TableRow>
            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <TextView
                    android:id="@+id/match_scoreA"
                    android:text="ScoreA"
                    android:layout_weight="1"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:gravity="center"/>
                <TextView
                    android:id="@+id/match_scoreB"
                    android:text="ScoreB"
                    android:layout_weight="1"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:gravity="center"/>
            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/match_view_space_between_tables"
            android:paddingLeft="@dimen/match_view_padding_table"
            android:paddingRight="@dimen/match_view_padding_table">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#222222">
                <TextView
                    android:layout_weight="1"
                    android:textColor="#fff"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="16dp"
                    android:text="@string/caption_period"/>
                <TextView
                    android:layout_weight="1"
                    android:textColor="#fff"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="16dp"
                    android:text="@string/caption_time"/>
            </TableRow>
            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <TextView
                    android:id="@+id/match_period"
                    android:text="Period"
                    android:layout_weight="1"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:gravity="center"/>
                <TextView
                    android:id="@+id/match_time"
                    android:text="Time"
                    android:layout_weight="1"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:gravity="center"/>
            </TableRow>
        </TableLayout>

        <TableLayout
            android:id="@+id/match_view_goals_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/match_view_space_between_tables"
            android:paddingLeft="@dimen/match_view_padding_table"
            android:paddingRight="@dimen/match_view_padding_table">
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:background="#222222">
                <TextView
                    android:layout_width="fill_parent"
                    android:textColor="#fff"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:text="@string/caption_goals"/>
            </TableRow>
            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <TextView
                    android:text="@string/caption_team"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:gravity="center"/>
                <TextView
                    android:text="@string/caption_player"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:gravity="center"/>
                <TextView
                    android:text="@string/caption_assists"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:gravity="center"/>
                <TextView
                    android:text="@string/caption_time"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:gravity="center"/>
            </TableRow>

        </TableLayout>

        <TableLayout
            android:id="@+id/match_view_penalties_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/match_view_space_between_tables"
            android:paddingLeft="@dimen/match_view_padding_table"
            android:paddingRight="@dimen/match_view_padding_table">
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:background="#222">
                <TextView
                    android:layout_width="fill_parent"
                    android:textColor="#fff"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:text="@string/caption_penalties"/>
            </TableRow>
            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <TextView
                    android:text="@string/caption_team"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:gravity="center"/>
                <TextView
                    android:text="@string/caption_player"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:gravity="center"/>
                <TextView
                    android:text="@string/caption_infringement"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:gravity="center"/>
                <TextView
                    android:text="@string/caption_duration"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:gravity="center"/>
                <TextView
                    android:text="@string/caption_time"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:gravity="center"/>
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:id="@+id/match_section_bet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="20dp">
            <EditText
                android:id="@+id/match_txtBetAmount"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:inputType="number"
                android:layout_weight="1">
            </EditText>
            <Spinner
                android:id="@+id/match_spBetTeam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Spinner>
            <Button
                android:id="@+id/match_btnBetAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/caption_betbtn" />
        </LinearLayout>
        <TextView
            android:id="@+id/match_lblBet"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Vous avez parié 1000$ sur ce match !"
            android:paddingTop="20dp"
            android:paddingRight="@dimen/match_view_padding_table"
            android:visibility="gone">
        </TextView>
    </LinearLayout>
</ScrollView>